--- a/blog-express/package.json
+++ b/blog-express/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "nanoid": "^4.0.1",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   }
